--- a/package.json
+++ b/package.json
@@ -11,19 +11,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
+    "@angular/animations": "^18.2.13",
+    "@angular/cdk": "^18.2.14",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
     "@angular/forms": "^18.2.0",
+    "@angular/material": "^18.2.14",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.5",
+    "animate.css": "^4.1.1",
     "express": "^4.18.2",
+    "gsap": "^3.13.0",
+    "jwt-decode": "^4.0.0",
+    "lucide-angular": "^0.511.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "ventanilla-unica-frontend": "file:",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
